<resources>
    <string name="app_name">Dotify</string>
    <string name="placeholder_user">Baby Yoda</string>
    <string name="change_user">CHANGE USER</string>
    <string name="song_title">Strangers</string>
    <string name="apply">APPLY</string>
    <string name="song_cover_desc">Album Cover of current song</string>
    <string name="song_artist">Seven Lions featuring Tove Lo, Myon, Shane 54</string>
    <string name="song_play_count">%d plays</string>
    <string name="prev_desc">Plays previous song</string>
    <string name="play_desc">Plays the song and increase song play count</string>
    <string name="next_desc">Plays next song</string>
    <string name="skip_prev">Skipping to previous track</string>
    <string name="skip_next">Skipping to next track</string>
    <string name="new_user">New User</string>
    <string name="selected_song">"%1$s - %2$s"</string>
    <string name="shuffle">Shuffle</string>
    <string name="album_cover">Album Cover</string>
    <string name="song_list_title">All Songs</string>
    <string name="settings">SETTINGS</string>
    <string name="profile">PROFILE</string>
    <string name="stats">PROFILE STATISTICS</string>
    <string name="about">ABOUT</string>
    <string name="current_user">%1$s %2$s</string>
    <string name="profile_pic_desc">Profile Picture</string>
    <string name="username">Username: %1$s</string>
    <string name="joined_date">Joined: January 1st 2020</string>
    <string name="age">Age: 10 years old</string>
    <string name="creator">Creator: Steven Luong</string>
    <string name="github">Github: github.com/stluongXD</string>
    <string name="version">Version: %1$s</string>
    <string name="play_count_stats">Play count: %d</string>
    <string name="user_load_failure">Current User Information is unable to load</string>
    <string name="refresh">Auto Refresh</string>
    <string name="new_song">New Song</string>
    <string name="new_song_description">Notifies when an aritst has a new song</string>
</resources>