<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="@dimen/large_cover"
        android:layout_height="@dimen/large_cover"
        android:src="@drawable/ash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_pic_desc" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_user"
        app:layout_constraintTop_toBottomOf="@id/ivProfilePic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/large_text"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintTop_toBottomOf="@id/tvUser"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="@dimen/large_padding"
        android:textSize="@dimen/medium_text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvJoinedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joined_date"
        android:textSize="@dimen/medium_text"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="@dimen/medium_text"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvJoinedDate"
        app:layout_constraintStart_toStartOf="parent" />







</androidx.constraintlayout.widget.ConstraintLayout>