<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_padding"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/userHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/eCurrentUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_user"
            android:visibility="gone"
            android:inputType="text"
            android:textSize="@dimen/small_text"
            android:layout_weight="3"
            android:autofillHints="no"
            android:hint="@string/new_user"
            />

        <TextView
            android:id="@+id/tCurrentUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_user"
            android:textSize="@dimen/small_text"
            android:layout_weight="3"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/btChangeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_user"
            android:layout_weight="1"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/userHeaderBarrier"
        android:layout_width="@dimen/no_dp"
        android:layout_height="@dimen/no_dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="userHeaderLayout" />

    <ImageView
        android:id="@+id/ivSongCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/medium_padding"
        android:src="@drawable/strangers_cover_art"
        app:layout_constraintTop_toBottomOf="@id/userHeaderBarrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        android:contentDescription="@string/song_cover_desc"
        />

    <TextView
        android:id="@+id/tvSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        app:layout_constraintTop_toBottomOf="@id/ivSongCover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="@dimen/small_padding"
        android:textSize="@dimen/large_text"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tvSongArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSongTitle"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/song_artist"
        android:textSize="@dimen/medium_text"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tvSongCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSongArtist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/medium_text"
        android:paddingTop="@dimen/large_padding"
        android:text="@string/song_play_count"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSongCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="@dimen/large_padding"
        >

        <ImageButton
            android:id="@+id/ibPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_previous"
            android:background="@android:color/transparent"
            android:foreground="?selectableItemBackground"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/prev_desc"
            />

        <ImageButton
            android:id="@+id/ibPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:foreground="?selectableItemBackground"
            android:src="@drawable/ic_play"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/play_desc"
            />

        <ImageButton
            android:id="@+id/ibNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:foreground="?selectableItemBackground"
            android:src="@drawable/ic_next"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/next_desc"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>